src/objects/TemplateQuestion__c.object
<CustomObject>
    <fields>
        <fullName>BusinessLinesAvailableTo__c</fullName>
        <label>Business Lines Available To</label>
        <picklist>
            <picklistValues>
                <fullName>ALL</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Building Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geography OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM/CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buildings &amp; Places</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>URS Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global IT BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synergy</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DCSSubDOA__c</fullName>
        <label>DCS Sub-DOA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnterpriseDOA__c</fullName>
        <label>Enterprise DOA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeographiesAvailableTo__c</fullName>
        <label>Geographies Available To</label>
        <picklist>
            <picklistValues>
                <fullName>ALL</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Midwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA - Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West/Gulf Coast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Overhead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Ideas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Risk Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Business Lines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Geographies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Project Excellence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office of Corporate Services</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HelpText__c</fullName>
        <label>Help Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Help_Icon_Text__c</fullName>
        <label>Help Icon Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Indented__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indented</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDoATrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is DoA Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNonProjectRelated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsNonProjectRelated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRMQuestion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is R&amp;M Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuestionSet__c</fullName>
        <label>Question Set</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QuestionnaireTemplate__c</fullName>
        <label>Questionnaire Template</label>
        <referenceTo>QuestionnaireTemplate__c</referenceTo>
        <relationshipName>Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RiskTitle__c</fullName>
        <label>Risk Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SectionPrefix__c</fullName>
        <label>Section Pre-fix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isDOAmaster__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDOAmaster</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xxIsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delete this field</description>
        <inlineHelpText>Delete this field</inlineHelpText>
        <label>xxIs Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xxTitle__c</fullName>
        <label>xxTitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Template Question</label>
    <listViews>
        <fullName>Budget</fullName>
        <columns>NAME</columns>
        <columns>RiskTitle__c</columns>
        <columns>SortOrder__c</columns>
        <columns>Question__c</columns>
        <columns>DCSSubDOA__c</columns>
        <columns>EnterpriseDOA__c</columns>
        <columns>QuestionnaireTemplate__c</columns>
        <columns>IsRMQuestion__c</columns>
        <columns>IsDoATrigger__c</columns>
        <columns>IsNonProjectRelated__c</columns>
        <columns>QuestionSet__c</columns>
        <columns>IsActive__c</columns>
        <columns>SectionPrefix__c</columns>
        <columns>Indented__c</columns>
        <columns>isDOAmaster__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuestionnaireTemplate__c</field>
            <operation>equals</operation>
            <value>Budget</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>4.Budget</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BudgetDOA</fullName>
        <columns>NAME</columns>
        <columns>RiskTitle__c</columns>
        <columns>SortOrder__c</columns>
        <columns>DCSSubDOA__c</columns>
        <columns>Question__c</columns>
        <columns>EnterpriseDOA__c</columns>
        <columns>QuestionnaireTemplate__c</columns>
        <columns>IsRMQuestion__c</columns>
        <columns>IsDoATrigger__c</columns>
        <columns>IsNonProjectRelated__c</columns>
        <columns>QuestionSet__c</columns>
        <columns>IsActive__c</columns>
        <columns>SectionPrefix__c</columns>
        <columns>Indented__c</columns>
        <columns>isDOAmaster__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuestionnaireTemplate__c</field>
            <operation>equals</operation>
            <value>Budget</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>IsDoATrigger__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>4.Budget (DOA)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Contract</fullName>
        <columns>NAME</columns>
        <columns>RiskTitle__c</columns>
        <columns>SortOrder__c</columns>
        <columns>Question__c</columns>
        <columns>DCSSubDOA__c</columns>
        <columns>EnterpriseDOA__c</columns>
        <columns>QuestionnaireTemplate__c</columns>
        <columns>IsRMQuestion__c</columns>
        <columns>IsDoATrigger__c</columns>
        <columns>QuestionSet__c</columns>
        <columns>IsActive__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>SectionPrefix__c</columns>
        <columns>Indented__c</columns>
        <columns>isDOAmaster__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuestionnaireTemplate__c</field>
            <operation>equals</operation>
            <value>Contract</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>2.Contract</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ContractDOA</fullName>
        <columns>NAME</columns>
        <columns>RiskTitle__c</columns>
        <columns>SortOrder__c</columns>
        <columns>DCSSubDOA__c</columns>
        <columns>Question__c</columns>
        <columns>EnterpriseDOA__c</columns>
        <columns>QuestionnaireTemplate__c</columns>
        <columns>IsRMQuestion__c</columns>
        <columns>IsDoATrigger__c</columns>
        <columns>QuestionSet__c</columns>
        <columns>IsActive__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>SectionPrefix__c</columns>
        <columns>Indented__c</columns>
        <columns>isDOAmaster__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuestionnaireTemplate__c</field>
            <operation>equals</operation>
            <value>Contract</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>IsDoATrigger__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>2.Contract (DOA)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DoATriggers</fullName>
        <columns>RiskTitle__c</columns>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>DCSSubDOA__c</columns>
        <columns>EnterpriseDOA__c</columns>
        <columns>QuestionnaireTemplate__c</columns>
        <columns>IsRMQuestion__c</columns>
        <columns>IsDoATrigger__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>SortOrder__c</columns>
        <columns>BusinessLinesAvailableTo__c</columns>
        <columns>GeographiesAvailableTo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsDoATrigger__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DoA Triggers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Nonproject</fullName>
        <columns>NAME</columns>
        <columns>RiskTitle__c</columns>
        <columns>DCSSubDOA__c</columns>
        <columns>EnterpriseDOA__c</columns>
        <columns>Question__c</columns>
        <columns>QuestionnaireTemplate__c</columns>
        <columns>IsRMQuestion__c</columns>
        <columns>IsDoATrigger__c</columns>
        <columns>QuestionSet__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>SectionPrefix__c</columns>
        <columns>SortOrder__c</columns>
        <columns>Indented__c</columns>
        <columns>isDOAmaster__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsNonProjectRelated__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Non-project</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Resources</fullName>
        <columns>NAME</columns>
        <columns>RiskTitle__c</columns>
        <columns>SortOrder__c</columns>
        <columns>Question__c</columns>
        <columns>DCSSubDOA__c</columns>
        <columns>EnterpriseDOA__c</columns>
        <columns>QuestionnaireTemplate__c</columns>
        <columns>IsDoATrigger__c</columns>
        <columns>IsRMQuestion__c</columns>
        <columns>QuestionSet__c</columns>
        <columns>IsActive__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>SectionPrefix__c</columns>
        <columns>Indented__c</columns>
        <columns>isDOAmaster__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuestionnaireTemplate__c</field>
            <operation>equals</operation>
            <value>Resources</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>7.Resources</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ResourcesDOA</fullName>
        <columns>NAME</columns>
        <columns>RiskTitle__c</columns>
        <columns>SortOrder__c</columns>
        <columns>DCSSubDOA__c</columns>
        <columns>Question__c</columns>
        <columns>EnterpriseDOA__c</columns>
        <columns>QuestionnaireTemplate__c</columns>
        <columns>IsDoATrigger__c</columns>
        <columns>IsRMQuestion__c</columns>
        <columns>QuestionSet__c</columns>
        <columns>IsActive__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>SectionPrefix__c</columns>
        <columns>Indented__c</columns>
        <columns>isDOAmaster__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuestionnaireTemplate__c</field>
            <operation>equals</operation>
            <value>Resources</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>IsDoATrigger__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>7.Resources (DOA)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SHnE</fullName>
        <columns>NAME</columns>
        <columns>RiskTitle__c</columns>
        <columns>SortOrder__c</columns>
        <columns>Question__c</columns>
        <columns>DCSSubDOA__c</columns>
        <columns>EnterpriseDOA__c</columns>
        <columns>QuestionnaireTemplate__c</columns>
        <columns>IsRMQuestion__c</columns>
        <columns>IsDoATrigger__c</columns>
        <columns>QuestionSet__c</columns>
        <columns>IsActive__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>SectionPrefix__c</columns>
        <columns>Indented__c</columns>
        <columns>isDOAmaster__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuestionnaireTemplate__c</field>
            <operation>equals</operation>
            <value>SH&amp;E and Resilience</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>1.SH&amp;E</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SHnEDOA</fullName>
        <columns>NAME</columns>
        <columns>RiskTitle__c</columns>
        <columns>SortOrder__c</columns>
        <columns>DCSSubDOA__c</columns>
        <columns>Question__c</columns>
        <columns>EnterpriseDOA__c</columns>
        <columns>QuestionnaireTemplate__c</columns>
        <columns>IsRMQuestion__c</columns>
        <columns>IsDoATrigger__c</columns>
        <columns>QuestionSet__c</columns>
        <columns>IsActive__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>SectionPrefix__c</columns>
        <columns>Indented__c</columns>
        <columns>isDOAmaster__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuestionnaireTemplate__c</field>
            <operation>equals</operation>
            <value>SH&amp;E and Resilience</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>IsDoATrigger__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>1.SH&amp;E (DOA)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Schedule</fullName>
        <columns>NAME</columns>
        <columns>RiskTitle__c</columns>
        <columns>SortOrder__c</columns>
        <columns>Question__c</columns>
        <columns>DCSSubDOA__c</columns>
        <columns>EnterpriseDOA__c</columns>
        <columns>QuestionnaireTemplate__c</columns>
        <columns>IsRMQuestion__c</columns>
        <columns>IsDoATrigger__c</columns>
        <columns>QuestionSet__c</columns>
        <columns>IsActive__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>SectionPrefix__c</columns>
        <columns>Indented__c</columns>
        <columns>isDOAmaster__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuestionnaireTemplate__c</field>
            <operation>equals</operation>
            <value>Schedule</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>5.Schedule</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Scope</fullName>
        <columns>NAME</columns>
        <columns>RiskTitle__c</columns>
        <columns>SortOrder__c</columns>
        <columns>Question__c</columns>
        <columns>DCSSubDOA__c</columns>
        <columns>EnterpriseDOA__c</columns>
        <columns>QuestionnaireTemplate__c</columns>
        <columns>IsRMQuestion__c</columns>
        <columns>IsDoATrigger__c</columns>
        <columns>QuestionSet__c</columns>
        <columns>IsActive__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>SectionPrefix__c</columns>
        <columns>Indented__c</columns>
        <columns>isDOAmaster__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuestionnaireTemplate__c</field>
            <operation>equals</operation>
            <value>Scope</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>3.Scope</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ScopeDOA</fullName>
        <columns>NAME</columns>
        <columns>RiskTitle__c</columns>
        <columns>SortOrder__c</columns>
        <columns>DCSSubDOA__c</columns>
        <columns>Question__c</columns>
        <columns>EnterpriseDOA__c</columns>
        <columns>QuestionnaireTemplate__c</columns>
        <columns>IsRMQuestion__c</columns>
        <columns>IsDoATrigger__c</columns>
        <columns>QuestionSet__c</columns>
        <columns>IsActive__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>SectionPrefix__c</columns>
        <columns>Indented__c</columns>
        <columns>isDOAmaster__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuestionnaireTemplate__c</field>
            <operation>equals</operation>
            <value>Scope</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>IsDoATrigger__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>3.Scope (DOA)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Stakeholders</fullName>
        <columns>NAME</columns>
        <columns>RiskTitle__c</columns>
        <columns>SortOrder__c</columns>
        <columns>Question__c</columns>
        <columns>DCSSubDOA__c</columns>
        <columns>EnterpriseDOA__c</columns>
        <columns>QuestionnaireTemplate__c</columns>
        <columns>IsRMQuestion__c</columns>
        <columns>IsDoATrigger__c</columns>
        <columns>QuestionSet__c</columns>
        <columns>IsActive__c</columns>
        <columns>isDOAmaster__c</columns>
        <columns>BusinessLinesAvailableTo__c</columns>
        <columns>GeographiesAvailableTo__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuestionnaireTemplate__c</field>
            <operation>equals</operation>
            <value>Stakeholders</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>6.Stakeholders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>StakeholdersDOA</fullName>
        <columns>NAME</columns>
        <columns>RiskTitle__c</columns>
        <columns>SortOrder__c</columns>
        <columns>DCSSubDOA__c</columns>
        <columns>Question__c</columns>
        <columns>EnterpriseDOA__c</columns>
        <columns>QuestionnaireTemplate__c</columns>
        <columns>IsRMQuestion__c</columns>
        <columns>IsDoATrigger__c</columns>
        <columns>QuestionSet__c</columns>
        <columns>IsActive__c</columns>
        <columns>isDOAmaster__c</columns>
        <columns>BusinessLinesAvailableTo__c</columns>
        <columns>GeographiesAvailableTo__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuestionnaireTemplate__c</field>
            <operation>equals</operation>
            <value>Stakeholders</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>IsDoATrigger__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>6.Stakeholders (DOA)</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TQ-{0000000000}</displayFormat>
        <label>Template Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>